@@ -1,3 +1,7 @@
+2002-04-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* traceroot.cpp: Deflate multiple zeros.
+
 2002-03-18  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* traceroot.cpp: Increase portability.
